# fuel-core

./: Cargo.toml  Makefile
crates/chain-config/: Cargo.toml
crates/client/: Cargo.toml
crates/fuel-core/: Cargo.toml
crates/fuel-core/src/: executor.rs  lib.rs
crates/fuel-core/src/service/: config.rs
crates/fuel-core/src/state/: rocks_db.rs
crates/fuel-core/src/state/in_memory/: memory_store.rs
crates/keygen/: Cargo.toml
crates/services/: Cargo.toml
crates/services/executor/: Cargo.toml
crates/services/executor/src/: executor.rs  lib.rs
crates/services/importer/: Cargo.toml
crates/services/p2p/: Cargo.toml
crates/services/relayer/: Cargo.toml
crates/services/txpool/: Cargo.toml
crates/services/upgradable-executor/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage/src/: codec.rs  kv_store.rs  structured_storage.rs  transactional.rs  vm_storage.rs
crates/storage/src/codec/: postcard.rs  primitive.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/types/src/services/: txpool.rs
test-assets/: tx-script-0.json  tx-script-1.json  tx-script-2.json
