[package]
name = "fuel-core-executor"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = ["blockchain", "fuel", "fuel-vm"]
license = { workspace = true }
repository = { workspace = true }
description = "Fuel Block Executor"

[dependencies]
anyhow = { workspace = true }
fuel-core-storage = { workspace = true, features = ["alloc"] }
fuel-core-types = { workspace = true, default-features = false, features = [
  "alloc",
] }
hex = { version = "0.4", default-features = false, features = ["serde"] }
#parking_lot = { workspace = true }
spin = { workspace = true, default-features = false, features = ["spin_mutex"] }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
fuel-core-storage = { workspace = true, default-features = false, features = [
  "test-helpers",
] }
fuel-core-trace = { path = "../../trace" }
fuel-core-types = { workspace = true, features = ["test-helpers"] }

[features]
default = ["std"]
std = ["fuel-core-types/std", "fuel-core-storage/std"]
alloc = ["fuel-core-types/alloc", "fuel-core-storage/alloc"]
test-helpers = [
  "fuel-core-types/test-helpers",
  "fuel-core-storage/test-helpers",
]
